# cameras

./: .gitignore  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/ru/visionlab/payment/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/ru/visionlab/payment/: CameraPreview.kt  MainActivity.kt  RgbCameraPreview.kt  Utils.kt
app/src/main/jni/: CMakeLists.txt  FsdkRoutine.h  Timer.h  wrapper_wrap.cxx
app/src/main/res/layout/: activity_main.xml
app/src/main/rs/: rotation.rs  yuv2ir.rs
app/src/test/java/ru/visionlab/payment/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
